namespace VoterSystem.Shared.Blazor.Services.SignalR
{
    public interface IBaseHubService
    {
        Task DisconnectHubAsync();
    }
}
